fixes spacing on mobile navigation

--- a/app/assets/stylesheets/webstop_docs.css.scss
+++ b/app/assets/stylesheets/webstop_docs.css.scss
@@ -1,10 +1,9 @@
 body{
   border-bottom: 20px solid #369;
   padding-bottom: 200px;
-  padding-top: 40px;
   background: #def;
 }
-.main-content{background: #fff; box-shadow: 0 0 120px 120px rgba(255,255,255,1.0);}
+.main-content{margin-top: 90px; background: #fff; box-shadow: 0 0 120px 120px rgba(255,255,255,1.0);}
 h1, h2, h3, h4, h5, h6 {color: #369;}
 
 .bs-docs-example { h1, h2, h3, h4, h5, h6 {color: #333;} }
